headline line spacing fix

--- a/assets/css/foundation.css
+++ b/assets/css/foundation.css
@@ -131,7 +131,7 @@ h1 {
   font-family: "Univers75Black";
   font-weight: 750;
   font-size: 2rem;
-  line-height: auto;
+  line-height: normal;
   color: var(--color-accent-2-text);
   text-align: center;
   margin-bottom: var(--spacer-element);
